kdeextragear/digikamplugins/WIP
Making all in pt
make[4]: Entering directory `/usr/src/digikamimageplugins-0.7.1-beta1/doc/pt'
Making all in digikamimageplugins
make[5]: Entering directory 
`/usr/src/digikamimageplugins-0.7.1-beta1/doc/pt/digikamimageplugins'
/usr/bin/meinproc --check --cache index.cache.bz2 ./index.docbook
I/O error : failed to load external entity "adjustcurves.docbook"
warning: failed to load external entity "adjustcurves.docbook"
index.docbook:229: error: Failure to process entity doc-adjustcurves
&doc-adjustcurves;
                  ^
index.docbook:229: parser error : Entity 'doc-adjustcurves' not defined
&doc-adjustcurves;
                  ^
make[5]: Leaving directory 
`/usr/src/digikamimageplugins-0.7.1-beta1/doc/pt/digikamimageplugins'
make[5]: *** [index.cache.bz2] Error 1

